Chat - initial work

--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
@@ -35,6 +35,7 @@
             </div>
             <app-add-book *ngSwitchCase="'add_book'" [masterBooksArray]="userBooks"></app-add-book>
             <app-my-requests *ngSwitchCase="'my_requests'"></app-my-requests>
+            <app-chat *ngSwitchCase="'my_books_chat'"></app-chat>
         </container-element>
     </div>
 
