--- a/BookItSrc/src/app/main/sub-main/settings/dialog-add-location-title/dialog-add-location-title.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/dialog-add-location-title/dialog-add-location-title.component.html
@@ -15,5 +15,6 @@
   </mat-form-field>
   <section class="add-section">
     <button mat-raised-button (click)="addName()">ADD </button>
+    <button mat-raised-button (click)="clickedCancel()">CANCEL</button>
   </section>
 </div>
