explore design edit

--- a/BookItSrc/src/app/main/navbar/navbar/navbar.component.scss
+++ b/BookItSrc/src/app/main/navbar/navbar/navbar.component.scss
@@ -10,7 +10,7 @@
   }
 
   .mat-toolbar-row{
-    background-color: #2B2727;
+    background-color: #2f3842;
     display: flex;
     justify-content: space-between;
   }
