--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
@@ -41,7 +41,7 @@ body{
 
   //switch categories
 .header {
-  background-color: #757575; 
+  background-color: #00b1b8; 
   color: white;
   width: 100%;
   
@@ -85,7 +85,7 @@ section {
   }
   .fa-plus{
     vertical-align: middle;
-    color: #2B2727;
+    color: #2f3842;
     font-size: 50px;
     filter: drop-shadow(0 0 3px rgba(0,0,0,0.7));
   }
