--- a/BookItSrc/src/app/main/sub-main/explore/explore.component.scss
+++ b/BookItSrc/src/app/main/sub-main/explore/explore.component.scss
@@ -5,9 +5,11 @@ body{
 
 //switch categories
 .header {
-  background-color: #757575; 
-  color: white;
+  background-color: #00b1b8; 
+  color: #FAFAFA;
   width: 100%;
+  border-top: 2px solid #FAFAFA;
+  border-radius: 0px 0px 40px 40px;
   
   //border-top: 2px solid #757575;
   //border-bottom: 2px solid #757575;
@@ -22,11 +24,20 @@ label.header-cat {
   flex-grow: 2;
   position: relative;
   right:0%;
+  margin-top: 2%;
   
   transform: translate(0%,0%);
 }
 .arrow-icon{
   height:35px;
+}
+.request-icon{
+  height:35px;
+  background-color: #00b1b8;
+  border-radius: 5px;
+  filter: drop-shadow(rgb(43, 39, 39) 1px 1px 2px);
+  box-sizing: border-box;
+
 }
 #rightArrowIcon{
   position: relative;
@@ -67,16 +78,33 @@ section {
     position:fixed;
     bottom:0%;
     color:white;
-    background-color: #C8C8C8;
-    border-top: 6px solid #2B2727;
+    background-color: #2f3842;
+    //border-bottom: 2px solid #00b1b8;
+    //border-left: 4px solid #00b1b8;
+    //border-right: 4px solid #00b1b8;
+    border-radius:30px 30px 0px 0px ;
     font-size: 32px;
-    height: 70px;
+    height: 75%;
     width: 100%;
 
   }
-  .bookNavbarList{
-    margin-top: 5px;
+  // .bookNavbarList{
+  //   //margin-top: 5px;
+  // }
+
+  .detailCover{
+    border-radius: 0px;
+    filter: drop-shadow(rgb(43, 39, 39) 1px 1px 2px);
   }
+  .detailCoverContainer{
+    position: absolute;
+    left: 5%;
+    height: 160px;
+    width:100px;
+  }
+
+
+
   .cover.blurred{
     opacity:0.5;
   }
@@ -97,5 +125,16 @@ section {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+  }
+
+  .heart {
+    font-size: 150px;
+    animation: beat .40s infinite alternate;
+    transform-origin: center;
+  }
+  
+  /* Heart beat animation */
+  @keyframes beat{
+    to { transform: scale(1.4); }
   }
   
