--- a/BookItSrc/src/app/main/sub-main/explore/explore.component.html
+++ b/BookItSrc/src/app/main/sub-main/explore/explore.component.html
@@ -42,7 +42,7 @@
                             <div style="box-sizing: border-box;display:inline-block;margin-left: 5%;">
                                     <span style="vertical-align:bottom;">Located Xkm. from you<br>Borrowed X times<br></span>
                                     <button  class="request-icon" (click)="requestBook(bookSelected)">
-                                            <mat-icon style="display:inline-block;" svgIcon='request-book-black'></mat-icon>
+                                            <mat-icon style="display:inline-block;" svgIcon='book-request-gray'></mat-icon>
                                             <span style="display:inline-block;color: #2f3842;top:50%;transform: translate(0%, -40%);">&nbsp;Request Book</span>
                                     </button>
                             </div>
