--- a/BookItSrc/src/app/main/sub-main/sub-main.component.html
+++ b/BookItSrc/src/app/main/sub-main/sub-main.component.html
@@ -9,3 +9,7 @@
 <div *ngIf="(_optionEnabled$ | async) ==='my_books'">
 	<app-my-books></app-my-books>
 </div>
+
+<div *ngIf="(_optionEnabled$ | async) ==='my_requests'">
+	<app-my-requests></app-my-requests>
+</div>
