--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
@@ -47,6 +47,7 @@ body{
     border-radius:50%;
     border-color: #fafafa;
     transform: scale(1.2);
+    background-color: #fafafa;
   }
 
   //switch categories
