--- a/BookItSrc/src/app/main/sub-main/settings/locations/add-location/add-location.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/locations/add-location/add-location.component.html
@@ -2,11 +2,11 @@
   <div class="container" *ngSwitchCase="'add_locations'">
 
     <section class="header">
-      <button mat-button label class="button-switch-page" (click)="goToLocations()">
-        <div *ngIf="1 === 1; then leftArrowIcon"></div>
-      </button>
-      <label class="header-add-loc" ngDefaultControl>Add Location</label>
-    </section>
+        <button mat-button label class="button-switch-page" (click)="goToLocations()">
+          <div *ngIf="1 === 1; then leftArrowIcon"></div>
+        </button>
+        <label class="header-add-loc">Add Location</label>
+      </section>
 
     <mat-card class="search-loc">
       <section class="total-search-section">
@@ -20,7 +20,7 @@
           </button>
         </mat-form-field>
         <button mat-icon-button class="button-add" (click)="addLocationName()">
-          <div *ngIf="1 === 1; then addIcon"></div>
+          <div *ngIf="new_location_address; then addIcon; else addIconGray;"></div>
         </button>
       </section>
     </mat-card>
@@ -48,6 +48,10 @@
 <ng-template #addIcon>
   <mat-icon svgIcon='add' class="add-icon"></mat-icon>
 </ng-template>
+
+<ng-template #addIconGray>
+    <mat-icon svgIcon='add-gray' class="add-icon"></mat-icon>
+  </ng-template>
 
 <ng-template #leftArrowIcon>
   <mat-icon svgIcon='left-arrow' class="left-arrow-icon"></mat-icon>
