--- a/BookItSrc/src/app/main/sub-main/settings/locations/locations.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/locations/locations.component.html
@@ -2,11 +2,11 @@
   <div class="container" *ngSwitchCase="'locations'">
 
     <section class="header">
-      <button mat-button label class="button-switch-page" (click)="goToSettings()">
-        <div *ngIf="1 === 1; then leftArrowIcon"></div>
-      </button>
-      <label class="header-loc" ngDefaultControl>Locations</label>
-    </section>
+        <button mat-button label class="button-switch-page" (click)="goToSettings()">
+          <div *ngIf="1 === 1; then leftArrowIcon"></div>
+        </button>
+        <label class="header-loc">Locations</label>
+      </section>
 
     <mat-card class="locations">
 
