--- a/BookItSrc/src/app/main/sub-main/settings/locations/add-location/add-location.component.scss
+++ b/BookItSrc/src/app/main/sub-main/settings/locations/add-location/add-location.component.scss
@@ -4,11 +4,34 @@
 }
 
 .header {
-  background-color: black;
+  background-color: #2f3842; 
   color: white;
   width: 100%;
-  height: 80px;
-  align-items: left;
+  flex: auto;
+  display: flex;
+}
+
+button-switch-page {
+  flex: start;
+  float: left;
+}
+
+label.header-add-loc {
+  flex-grow: 2;
+  position: absolute;
+  margin: 0;
+  left: 50%;
+  transform: translate(-50%,0%);
+}
+
+.left-arrow-icon{
+  height:56px;
+}
+
+section {
+  display: flex;
+  align-items: center;
+  justify-content: stretch;
 }
 
 agm-map {
@@ -56,35 +79,12 @@ agm-map {
   color: #737373;
 }
 
-left-arrow-icon {
-  align-items: flex-start;
-  width: 65px;
-  height: 65px;
-}
-
-label.header-add-loc {
-  flex-grow: 2;
-  position: relative;
-  right: 44px;
-  margin: 0;
-}
-
-section {
-  display: flex;
-  align-items: center;
-  justify-content: stretch;
-}
-
-
 @media (max-width: 230px) {
   .container {
     display: none;
   }
 }
 
-.header{
-  display: flex;
-}
 
 /* http://stackoverflow.com/questions/12499886/how-to-hide-or-disable-the-google-logo-footer-copyright-on-google-maps-javascr */
 a[href^="http://maps.google.com/maps"] {
