--- a/BookItSrc/src/app/main/sub-main/settings/locations/locations.component.scss
+++ b/BookItSrc/src/app/main/sub-main/settings/locations/locations.component.scss
@@ -3,17 +3,34 @@
 }
 
 .header {
-  background-color: black;
+  background-color: #2f3842; 
   color: white;
   width: 100%;
-  height: 80px;
-  align-items: left;
+  flex: auto;
+  display: flex;
 }
 
-.button-switch-page {
-  align-content: center;
-  padding-left: 20px;
-  align-self: left;
+button-switch-page {
+  flex: start;
+  float: left;
+}
+
+label.header-loc {
+  flex-grow: 2;
+  position: absolute;
+  margin: 0;
+  left: 50%;
+  transform: translate(-50%,0%);
+}
+
+.left-arrow-icon{
+  height:56px;
+}
+
+section {
+  display: flex;
+  align-items: center;
+  justify-content: stretch;
 }
 
 .loc-div {
@@ -29,29 +46,10 @@
   height: 30px;
 }
 
-left-arrow-icon {
-  align-items: flex-start;
-  width: 65px;
-  height: 65px;
-}
-
-label.header-loc {
-  flex-grow: 2;
-  position: relative;
-  right: 44px;
-  margin: 0;
-}
-
-
-section.header {
-  display: flex;
-  align-items: center;
-  justify-content: stretch;
-}
 
 .button-add-loc {
   width: 100%;
-  background-color: #03a9f4;
+  background-color: #00b1b8;
   color: white;
   height: 60px;
 }
@@ -71,7 +69,7 @@ section.header {
 }
 
 .blue-icon svg {
-  fill: #03a9f4;
+  fill: #00b1b8;
 }
 .gray-icon svg {
   fill: #d0d0d0;
