--- a/BookItSrc/src/app/main/sub-main/settings/settings.component.scss
+++ b/BookItSrc/src/app/main/sub-main/settings/settings.component.scss
@@ -21,7 +21,7 @@ img {
   border-radius: 50%;
   border-style: inset;
   border-width: 2px;
-  border-color: #03a9f4;
+  border-color: #00b1b8;
   height: 20%;
   width: 50%;
 }
@@ -34,7 +34,7 @@ hr {
   margin-right: auto;
   border-style: inset;
   border-width: 1px;
-  border-color: #03a9f4;
+  border-color: #00b1b8;
 }
 
 right-arrow-icon {
