--- a/BookItSrc/src/app/main/navbar/navbar/navbar.component.scss
+++ b/BookItSrc/src/app/main/navbar/navbar/navbar.component.scss
@@ -10,9 +10,11 @@
   }
 
   .mat-toolbar-row{
-    background-color: #2B2727;
+    background-color: #2f3842;
     display: flex;
     justify-content: space-between;
+    position: fixed;
+    z-index: 9;
   }
   .mat-toolbar-row2{
     background-color: #fafafa;
@@ -27,6 +29,7 @@
   .mat-toolbar{
     display:flex;
     flex-direction: column-reverse;
+    
   }
 
  
