book selected ok

--- a/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.html
@@ -23,7 +23,7 @@
 
     </div>
 
-    <app-chat caller="my_requests" [bookChat]="bookSelected" *ngSwitchCase="'my_requests_chat'"></app-chat>
+    <app-chat [caller]="'my_requests'" [bookChat]="bookSelected" *ngSwitchCase="'my_requests_chat'"></app-chat>
   </container-element>
 </div>
 
