--- a/BookItSrc/src/app/main/sub-main/chat/chat.component.html
+++ b/BookItSrc/src/app/main/sub-main/chat/chat.component.html
@@ -1,6 +1,6 @@
 <container-element [ngSwitch]="this.which_page">
   <div>
-
+    <img src="assets/images/panda.png"  class="back-pic"/>
     <section class="header">
       <button mat-button label class="button-switch-page" (click)="goToMyBooks()">
         <div *ngIf="1 === 1; then leftArrowIcon"></div>
