--- a/BookItSrc/src/app/main/sub-main/chat/chat.component.html
+++ b/BookItSrc/src/app/main/sub-main/chat/chat.component.html
@@ -5,7 +5,7 @@
       <button mat-button label class="button-switch-page" (click)="goToMyBooks()">
         <div *ngIf="1 === 1; then leftArrowIcon"></div>
       </button>
-      <label class="header-chat" ngDefaultControl>Chat</label>
+      <span class="header-chat" ngDefaultControl>Chat</span>
     </section>
 
 
@@ -35,13 +35,15 @@
     <div class="chat-msg">
       <mat-card class="send-msg">
         <section class="total-chat-msg-section">
+          
           <mat-form-field class="add-msg">
-            <input matInput class="chat-input" placeholder="Enter message here..." autocorrect="off" autocapitalize="off" spellcheck="off"
-              type="text" #search [(ngModel)]="msgVal">
+            <textarea matInput class="chat-input" placeholder="Enter message here..." autocorrect="off" autocapitalize="off" spellcheck="off"
+              type="text" #search [(ngModel)]="msgVal"></textarea>
             <button mat-button *ngIf="msgVal" matSuffix mat-icon-button aria-label="Clear" (click)="emptyChatText()">
               <mat-icon>close</mat-icon>
             </button>
           </mat-form-field>
+
           <button mat-icon-button class="button-send" (click)="chatSend()">
             <div *ngIf="msgVal; then sendIcon; else sendIconGray;"></div>
           </button>
